--- a/Css.css
+++ b/Css.css
@@ -1,12 +1,12 @@
 *{
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 .demo {
 border:1px solid #C0C0C0;
 border-collapse:collapse;
 padding:5px;
-width:auto;
+width:50%;
 }
 .demo th {
 border:2px solid black;
@@ -40,48 +40,48 @@ color: cornsilk;
 
 
 a:link, a:visited {
-    background-color: #f44336;
-    color: white;
-    padding: 14px 25px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    border-radius: 25px;
-  }
-  
-  a:hover, a:active {
-    background-color: red;
-  }
+  background-color: #f44336;
+  color: white;
+  padding: 14px 25px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  border-radius: 25px;
+}
 
-  /* this is the footer section
+a:hover, a:active {
+  background-color: red;
+}
+
+/* this is the footer section
 .fa {
-    padding: 12px;
-    font-size: 30px;
-    width: 55px;
-    text-align: center;
-    text-decoration: none;
-    margin: 5px 2px;
-  }
-  
-  .fa:hover {
-      opacity: 0.5;
-  }
-  
-  .fa-facebook {
-    background: #3B5998;
-    color: white;
-  }
+  padding: 12px;
+  font-size: 30px;
+  width: 55px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+}
 
-  .fa-google {
-    background: #dd4b39;
-    color: white;
-  }
-  
-  .fa-linkedin {
-    background: #007bb5;
-    color: white;
-  }
-  .fa-instagram {
-    background: #125688;
-    color: white;
-  } */
+.fa:hover {
+    opacity: 0.5;
+}
+
+.fa-facebook {
+  background: #3B5998;
+  color: white;
+}
+
+.fa-google {
+  background: #dd4b39;
+  color: white;
+}
+
+.fa-linkedin {
+  background: #007bb5;
+  color: white;
+}
+.fa-instagram {
+  background: #125688;
+  color: white;
+} */
